--- a/src/pages/BuilderPage.module.css
+++ b/src/pages/BuilderPage.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 770px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .toolBar {
